duniverse/menhirLib.20200211/test/static/good/permutation-growth.mly
(* Another (artificial) example where the parameters are exchanged
   in the recursive call. *)

%token A B
%start<unit> main

%%

F(X,Y):
  B         {}
| A F(Y, X) {}

id(X):
  X {}

main:
  F(A, id(A)) {}
